// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DescriptioinListTermHelpText renders to match snapshot 1`] = `
<DocumentFragment>
  <dt
    class="pf-v5-c-description-list__term"
  >
    <span
      class="pf-v5-c-description-list__text pf-m-help-text"
      role="button"
      tabindex="0"
      type="button"
    >
      test
    </span>
  </dt>
</DocumentFragment>
`;

exports[`DescriptionListDescription renders to match snapshot 1`] = `
<DocumentFragment>
  <dd
    class="pf-v5-c-description-list__description"
  >
    <div
      class="pf-v5-c-description-list__text"
    >
      test
    </div>
  </dd>
</DocumentFragment>
`;

exports[`DescriptionListGroup renders to match snapshot 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-description-list__group"
  >
    test
  </div>
</DocumentFragment>
`;

exports[`DescriptionListTerm renders to match snapshot 1`] = `
<DocumentFragment>
  <dt
    aria-labelledby="term-1"
    class="pf-v5-c-description-list__term"
  >
    <span
      class="pf-v5-c-description-list__text"
    >
      test
    </span>
  </dt>
</DocumentFragment>
`;

exports[`renders to match snapshot 1`] = `
<DocumentFragment>
  <dl
    aria-label="list"
    class="pf-v5-c-description-list"
  />
</DocumentFragment>
`;
